--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,6 +14,11 @@ html{
   font-size: 62.5%;
   box-sizing: border-box;
   font-family: Arial, Helvetica, sans-serif;
+
+  background-image: url('/img/f1-background.jpg');
+  /* background-position: center; */
+  background-size:auto;
+  background-repeat: no-repeat;
 }
 *, *::before, *::after{
   margin: 0;
@@ -30,23 +35,30 @@ body{
 .container{
   /* height: 80%; */
   width: 90%;
+  height: 90%;
   margin-top: 5rem;
-  border: 1px solid red;
+  /* border: 1px solid red; */
+  border-radius: 1rem;
+  background-color: white;
 }
 .year-selection{
   display: flex;
   justify-content: center;
   margin: 1rem 0;
+
+  text-align: center;
 }
 #year{
   height: 3rem;
   width: 10rem;
+  margin: 0 2rem;
   font-size: 2rem;
   text-align: center;
 }
 #race{
   height: 3rem;
-  width: 20rem;
+  width: 40rem;
+  margin: 0 2rem;
   font-size: 2rem;
   text-align: center;
 }
