--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16,7 +16,6 @@ html {
 	font-family: Arial, Helvetica, sans-serif;
 
 	background-image: url("/img/f1-background.jpg");
-	/* background-position: center; */
 	background-size: auto;
 	background-repeat: no-repeat;
 }
@@ -29,17 +28,13 @@ html {
 }
 body {
 	display: flex;
-	/* height: 100%; */
 	width: 100vw;
 	justify-content: center;
 	align-items: center;
 }
 .container {
-	/* height: 80%; */
 	width: 90%;
-	height: 90%;
 	margin-top: 5rem;
-	/* border: 1px solid red; */
 	border-radius: 1rem;
 	background-color: white;
 }
@@ -70,7 +65,6 @@ body {
 	width: 100%;
 	justify-content: space-evenly;
 	flex-direction: row;
-	/* border: 1px solid green; */
 }
 .title-bar h1 {
 	height: 5rem;
@@ -79,7 +73,6 @@ body {
 
 	background-color: #e10600;
 	color: white;
-	/* border: 1px solid yellow; */
 	border-radius: 1rem;
 
 	font-size: 2rem;
@@ -111,14 +104,11 @@ body {
 	width: 90%;
 	justify-content: center;
 	justify-self: center;
-	/* margin-top: 1rem;
-  margin-bottom: 1rem; */
 	margin: 1rem auto;
 	padding: 0.5rem 0rem;
 
 	background-color: black;
 	color: white;
-	/* border: 1px solid yellow; */
 	border-radius: 0.5rem;
 
 	font-size: 1.2rem;
@@ -126,7 +116,6 @@ body {
 	text-align: center;
 }
 .modal {
-	/* height: 100%; */
 	width: 100%;
   margin: none;
 	display: flex;
@@ -155,7 +144,6 @@ body {
 	text-align: center;
 }
 .results-container {
-  height: 90%;
 	width: 100%;
 	display: flex;
   flex-direction: row;
@@ -164,29 +152,20 @@ body {
 .driver-race-results,
 .constructor-race-results,
 .circuit-image {
-	height: 80%;
 	width: 30%;
-	/* margin: auto; */
 }
 .driver-race-results{
   display: flex;
-  /* flex-direction: column; */
-  /* columns: 2; */
   flex-wrap: wrap;
 }
 .driver-race-standings{
-  /* display: flex; */
-  /* flex-direction: row; */
   width: 60%;
 }
 .driver-race-points{
-  /* display: flex; */
-  /* flex-direction: row; */
-  width: 30%;
+  width: 40%;
 }
 .driver-race-standings div {
-	height: 5%;
-	/* width: 60%; */
+	height: 3rem;
 	display: flex;
 	flex-direction: row;
 	margin: auto 1rem .5rem;
@@ -200,17 +179,13 @@ body {
 	text-align: center;
 }
 .driver-race-points div{
-  height: 5%;
-  /* width: 40%; */
-
+  height: 3rem;
   display: flex;
 	flex-direction: row;
   margin: auto 1rem .5rem;
 	justify-content: center;
-
 	border: 1px solid black;
 	border-radius: 0.5rem;
-
 	font-size: 2rem;
 	line-height: 3rem;
 	text-align: center;
