--- a/public/css/style.css
+++ b/public/css/style.css
@@ -117,7 +117,7 @@ body {
 }
 .modal {
 	width: 100%;
-  margin: none;
+	margin: none;
 	display: flex;
 	flex-wrap: wrap;
 	background-color: white;
@@ -128,12 +128,13 @@ body {
 	display: flex;
 	flex-direction: row;
 	justify-content: space-evenly;
-  align-items: center;
+	align-items: center;
 }
 .modal-title-bar h1 {
-  height: 5rem; 
-	width: 30%;
+	height: 5rem;
+	width: 45%;
 	display: flex;
+  margin: 1rem auto;
 	text-align: center;
 	justify-content: center;
 	background-color: #e10600;
@@ -146,29 +147,31 @@ body {
 .results-container {
 	width: 100%;
 	display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
+	flex-direction: row;
+	justify-content: space-evenly;
 }
 .driver-race-results,
-.constructor-race-results,
 .circuit-image {
-	width: 30%;
+	width: 50%;
 }
-.driver-race-results{
-  display: flex;
-  flex-wrap: wrap;
+.driver-race-results {
+	display: flex;
+	flex-wrap: wrap;
 }
-.driver-race-standings{
-  width: 60%;
+.driver-race-standings {
+	width: 40%;
 }
-.driver-race-points{
+.driver-race-points {
+	width: 20%;
+}
+.driver-race-constructor{
   width: 40%;
 }
 .driver-race-standings div {
 	height: 3rem;
 	display: flex;
 	flex-direction: row;
-	margin: auto 1rem .5rem;
+	margin: 1rem 0.25rem;
 	justify-content: center;
 
 	border: 1px solid black;
@@ -178,11 +181,23 @@ body {
 	line-height: 3rem;
 	text-align: center;
 }
-.driver-race-points div{
+.driver-race-points div {
+	height: 3rem;
+	display: flex;
+	flex-direction: row;
+	margin: 1rem 0.25rem;
+	justify-content: center;
+	border: 1px solid black;
+	border-radius: 0.5rem;
+	font-size: 2rem;
+	line-height: 3rem;
+	text-align: center;
+}
+.driver-race-constructor div{
   height: 3rem;
   display: flex;
 	flex-direction: row;
-  margin: auto 1rem .5rem;
+	margin: 1rem 0.25rem;
 	justify-content: center;
 	border: 1px solid black;
 	border-radius: 0.5rem;
@@ -190,10 +205,10 @@ body {
 	line-height: 3rem;
 	text-align: center;
 }
-.circuit-image img{
-  height: 100%;
-  width: 100%;
-  object-fit: contain;
+.circuit-image img {
+	height: 100%;
+	width: 100%;
+	object-fit: contain;
 }
 /******************************************
 /* ADDITIONAL STYLES
