--- a/public/css/style.css
+++ b/public/css/style.css
@@ -116,11 +116,21 @@ body {
 	text-align: center;
 }
 .modal {
-	width: 100%;
-	margin: none;
+	height: 90%;
+	width: 90%;
+	position: absolute;
+	z-index: 1;
+	top: 10rem;
+	/* margin: auto; */
 	display: flex;
 	flex-wrap: wrap;
 	background-color: white;
+	/* align-items:flex-start; */
+	/* background-color: rgba(0,0,0,0.4); */
+
+	/* justify-self: center;
+	justify-content: center;
+	justify-items: center; */
 }
 .modal-title-bar {
 	height: 10%;
